--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -348,6 +348,8 @@
   .progress-radial:first-child{
     margin-left:56px;
   }
+
+  
 }
 
 
@@ -382,38 +384,27 @@
 }
 
 
-.counter
-{
-    background-color: #eaecf0;
-    text-align: center;
-}
-.employees,.customer,.design,.order
-{
-    margin-top: 70px;
-    margin-bottom: 70px;
-}
-.counter-count
-{
-    font-size: 18px;
-    background-color: #00b3e7;
-    border-radius: 50%;
-    position: relative;
-    color: #ffffff;
-    text-align: center;
-    line-height: 92px;
-    width: 92px;
-    height: 92px;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    display: inline-block;
+
+
+.counter-map{
+
+  background-image: url('/assets/images/world-map.png');
+  background-repeat: no-repeat;
+  opacity: 0.9;
+  background-size: 100%;
 }
 
-.employee-p,.customer-p,.order-p,.design-p
-{
-    font-size: 24px;
-    color: #000000;
-    line-height: 34px;
-}
+.counter-underline{
+border-bottom: 3px solid blue;
+    position: absolute;
+    line-height: 40px;
+    text-align: center;
+    width: 37%;
+    top: 50%;
+    margin-top: -20px;
+    left: 145%;
+  }
 
+  .lineHeightAdjustor{
+    font-weight: 800;
+  }
