--- a/src/styles.css
+++ b/src/styles.css
@@ -115,8 +115,8 @@ height: 2em !important;
 
 
 .profilepicture{
-    width: 111px;
-    height: 111px;
+    width: 90px;
+    height: 90px;
 }
 
 .bg-dark{
@@ -146,3 +146,7 @@ height: 2em !important;
         width: 50px;
         float: right;
     }
+
+    .progress{
+        background-color: #e9ecef24 !important;
+      }
