--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -158,11 +158,16 @@
                 {{getLoggedInUserObject()['name'] | titlecase}}
             </span>
         </div>
-
-
     </div>
-
+<div class="w_100">
+    <h1 class="custom-heading animated zoomInLeftBig"><span>STUVATION</span></h1>
+    <p class="custom-ss animated fadeInRightBig">S t u d e n t <span>+</span> i n n o v a t i o n</p>
 </div>
+
+</div><!--row end-->
+
+
+
 <div class="row" style="margin-top:1em;">
     <div class="col-1">
 
