--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -269,46 +269,66 @@
 
 
 </div>
-<div class="row" style=" background: linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(25, 87, 138, 1) 45%, rgba( 25, 87, 138, 1) 100%), url(./assets/images/about-us.jpg);">
+<div class="row about-section" style=" background: linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(25, 87, 138, 1) 45%, rgba( 25, 87, 138, 1) 100%), url(./assets/images/aboutbanner.png);">
     <div class="col-10" style="margin-left: 8%;color: white;text-align: justify;">
-        <span style="text-align: center">
-            <h1>About Us</h1>
-            <br />
-            <h4> Who </h4>
-        </span>
-        The Engineers Factory is a socio-tech startup which objects to reform the Engineering Education System, formed
-        by team of IIT Alumni and Industrial Experts with mission of bridge the gap between industry and academia.
-        <br /><br />
-        <span style="text-align: center">
-            <h4> Why </h4>
-        </span>
+        <h1 class="text-center about-us-head">ABOUT <strong>US</strong></h1>
+        <div class="row">
+            <div class="col-md-8 col-sm-12">
+                <span>
 
-        When there is a need for every gadget or application updating according to the contemporary trend, then why &
-        how the academic curriculum almost remains the same.
-        Helping students imbibe practical knowledge, making them mindful of the trends being set in the industry and
-        Building a better nation where academia works in synergy with industry.
-        <div *ngIf="viewMoreClicked">
-            <br />
-            <h4> How </h4>
+                    <h4> Who We Are</h4>
+                </span>
+                The Engineers Factory is a socio-tech startup which objects to reform the Engineering Education System,
+                formed
+                by team of IIT Alumni and Industrial Experts with mission of bridge the gap between industry and
+                academia.
+                <br /><br />
+                <span>
+                    <h4> Why Choose Us</h4>
+                </span>
 
-            Get the experts insight, think like a professional, know the latest industry trends and interact directly
-            with the professionals through The Engineers Factory innovations Tech Bank, Stuvations, Tech Connect
-            ,Engship and many more.
-            <br /><br />
-            <h4> Our Mission </h4>
+                When there is a need for every gadget or application updating according to the contemporary trend, then
+                why &
+                how the academic curriculum almost remains the same.
+                Helping students imbibe practical knowledge, making them mindful of the trends being set in the
+                industry and
+                Building a better nation where academia works in synergy with industry.
+                <div *ngIf="viewMoreClicked">
+                    <br />
+                    <h4> How </h4>
 
-            Bridge the gap between industry and academia
-            <br /><br />
-            <h4> Our Vision </h4>
+                    Get the experts insight, think like a professional, know the latest industry trends and interact
+                    directly
+                    with the professionals through The Engineers Factory innovations Tech Bank, Stuvations, Tech
+                    Connect
+                    ,Engship and many more.
+                    <br /><br />
+                    <h4> Our Mission </h4>
 
-            Make In India @ Made by Indians
+                    Bridge the gap between industry and academia
+                    <br /><br />
+                    <h4> Our Vision </h4>
+
+                    Make In India @ Made by Indians
+                </div>
+                <button class="float-right custom-ss-viewmore-btn" (click)="viewMoreClickChange()">
+                    <span *ngIf="!viewMoreClicked">View More</span>
+                    <span *ngIf="viewMoreClicked">View Less</span>
+                </button>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <img class="w-100 about-png" src="../assets/images/aboutengg.png" alt="advertisement">
+            </div>
         </div>
+
         <div class="col-lg-12">
-            <button class="btn aboutbutton btn-success" (click)="viewMoreClickChange()">
-                <span *ngIf="!viewMoreClicked">View More</span>
-                <span *ngIf="viewMoreClicked">View Less</span>
-            </button>
+            <!-- <button class="btn aboutbutton btn-success" (click)="viewMoreClickChange()"> -->
+
+            <!-- </button> -->
+
         </div>
+
+
     </div>
 </div>
 <div class="row" style="background-color: #F4F6F5; padding-top:3em;">
@@ -431,14 +451,24 @@
                             <p class="student whiteBoldText lineHeightAdjustor" style="color : black !important;">ProzectMe</p>
                         </div>
                     </div>
+
+
                 </section>
             </div>
+
         </div>
 
     </div>
 </div>
 
-
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 col-sm-12">
+            <button type="button" class="mb-5 mt-5 custom-ss-download-broucher-btn"><i class="fa fa-download"></i>
+                &nbsp;Download Broucher</button>
+        </div>
+    </div>
+</div>
 
 
 
@@ -475,8 +505,8 @@
         </section>
     </div>
 </div> -->
-<div class="row" style="margin-top: 1em; margin-bottom: 1em;">
+<!-- <div class="row" style="margin-top: 1em; margin-bottom: 1em;">
     <a>
         <img class="w-100" src="../assets/images/Stuvation_1.jpg" alt="advertisement">
     </a>
-</div>
+</div> -->
