--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -408,3 +408,51 @@ border-bottom: 3px solid blue;
   .lineHeightAdjustor{
     font-weight: 800;
   }
+
+  .custom-ss-download-broucher-btn {
+    background-image: linear-gradient(to right, #3a0aa3, #7a11ce);
+    color: #fff;
+    border: 1px solid #3a0aa3;
+    -webkit-box-shadow: 0px 7px 18px -6px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 7px 18px -6px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 7px 18px -6px rgba(0, 0, 0, 0.75);
+    padding: 15px;
+    cursor: pointer;
+    margin: auto;
+    display: block;
+}
+
+.about-us-head{
+  color: black !important;
+  font-weight: 400 !important;
+  font-size: 35px;
+  margin-top: 20px;
+  font-family: inherit;
+}
+
+.about-section h4{
+  font-weight: 600 !important;
+  font-size: 20px !important;
+  color: black !important;
+}
+
+.about-png{
+  position: absolute;
+  height: 326px;
+  width: 326px;
+  /* min-width: 308px; */
+  left: 10%;
+}
+
+.custom-ss-viewmore-btn {
+  background-image: linear-gradient(to right, #3a0aa3, #7a11ce);
+  border: 1px solid #3a0aa3;
+  color: #fff;
+  border-radius: 25px;
+  padding: 5px 25px;
+  -webkit-box-shadow: 0px 7px 18px -6px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 7px 18px -6px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 7px 18px -6px rgba(0, 0, 0, 0.75);
+
+  margin-top: 20px;
+}
